# cog_async_socket

./: .gitignore  CMakeLists.txt  README.md
cog_challenge_client/: CMakeLists.txt  main.cpp  setenv.sh
cog_challenge_server/: CMakeLists.txt  connectionhandler.h  filewriter.h  main.cpp  server.cpp  server.h  setenv.sh  setup.cpp  setup.h
cog_client/: CMakeLists.txt  setenv.sh
cog_server/: CMakeLists.txt  connectionhandler.cpp  filewriter.cpp  server
